force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__CurrentGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrentGroupId__c</fullName>
    <label>Current Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrentGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>