force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__EnrollmentLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrollmentLocationId__c</fullName>
    <label>Enrollment Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrollmentLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>