force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__IsPatientInLtrmCareFacility__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPatientInLtrmCareFacility__c</fullName>
    <label>Is Patient in Long Term Care Facility</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPatientInLtrmCareFacility</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>