force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__LeadId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadId__c</fullName>
    <label>Lead</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LeadId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>