force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__OptOutReasonType__c.field-meta.xml
<CustomField>
    <fullName>ssot__OptOutReasonType__c</fullName>
    <label>Opt Out Reason Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OptOutReasonType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>