force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__PatientId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PatientId__c</fullName>
    <label>Patient</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PatientId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>