force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__rel_1716726238625_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726238625_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramEnrollee_CareProgramId_ma_rel</label>
    <referenceTo>ssot__CareProgram__dlm</referenceTo>
    <relationshipLabel>CareProgramEnrollee_CareProgramId_ma_rel</relationshipLabel>
    <relationshipName>rel_1716726238625_end</relationshipName>
    <type>Lookup</type>
</CustomField>