force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__rel_1716726259401_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726259401_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramEnrollee_PatientId_map_Pa_rel</label>
    <referenceTo>ssot__Patient__dlm</referenceTo>
    <relationshipLabel>CareProgramEnrollee_PatientId_map_Pa_rel</relationshipLabel>
    <relationshipName>rel_1716726259401_end</relationshipName>
    <type>Lookup</type>
</CustomField>