force-app/main/default/objects/ssot__CareProgramEnrollee__dlm/fields/ssot__rel_1716726261795_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726261795_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareProgramEnrollee_UserId_map_User__rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>CareProgramEnrollee_UserId_map_User__rel</relationshipLabel>
    <relationshipName>rel_1716726261795_end</relationshipName>
    <type>Lookup</type>
</CustomField>